@@ -1,7 +1,7 @@
 # You won't need to alter these
 TARGET=$(shell cat TARGET)
 SOURCES=smain.c common.c sound.c z80.c sdl_engine.c sdl_hotspots.c \
-	sdl_input.c sdl_resources.c sdl_video.c
+	sdl_input.c sdl_resources.c sdl_sound.c sdl_video.c
 OBJECTS=$(patsubst %.c, %.o, $(SOURCES))
 VERSION=$(shell cat VERSION)
 export PACKAGE_DATA_DIR=./data
@@ -15,7 +15,7 @@ SDL_CONFIG=$(DEVPREFIX)/bin/sdl-config
 CC=$(DEVPREFIX)/arm-open2x-linux/bin/arm-open2x-linux-gcc
 CFLAGS=-O3 -Wall -I$(DEVPREFIX)/include `$(SDL_CONFIG) --cflags` \
 	-DPLATFORM_GP2X -DVERSION=\"$(VERSION)\" -DPACKAGE_DATA_DIR=\"$(PACKAGE_DATA_DIR)\" \
-	-DOSS_SOUND_SUPPORT -DSZ81 
+	-DOSS_SOUND_SUPPORT -DTOOLCHAIN_OPEN2X -DSZ81 
 LINK=$(CC)
 LDFLAGS=-L$(DEVPREFIX)/lib 
 LIBS=-lstdc++ `$(SDL_CONFIG) --static-libs` 
