@@ -1,7 +1,7 @@
 # You won't need to alter these
 TARGET=$(shell cat TARGET)
 SOURCES=smain.c common.c sound.c z80.c sdl_engine.c sdl_hotspots.c \
-	sdl_input.c sdl_resources.c sdl_video.c
+	sdl_input.c sdl_resources.c sdl_sound.c sdl_video.c
 OBJECTS=$(patsubst %.c, %.o, $(SOURCES))
 VERSION=$(shell cat VERSION)
 export PREFIX=/opt/QtPalmtop
