@@ -1,6 +1,5 @@
-/* z81/xz81, Linux console and X ZX81/ZX80 emulators.
- * Copyright (C) 1994 Ian Collier. z81 changes (C) 1995-2001 Russell Marks.
- *
+/* sz81 Copyright (C) 2007-2010 Thunor <thunorsif@hotmail.com>
+ * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
@@ -14,23 +13,19 @@
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- *
- *
- * sound.h
  */
 
-#ifdef OSS_SOUND_SUPPORT
+/* Defines */
+#define SOUND_BUFFER_SIZE (1024 * 16)
 
-extern int sound_enabled;
-extern int sound_freq;
-extern int sound_stereo;
-extern int sound_stereo_acb;
+/* Variables */
+struct {
+	int enabled;
+	Uint8 buffer[SOUND_BUFFER_SIZE];
+	int buffer_start;
+	int buffer_end;
+} sdl_sound;
 
-extern void sound_init(void);
-extern void sound_end(void);
-extern void sound_frame(void);
-extern void sound_ay_write(int reg,int val);
-extern void sound_ay_reset(void);
-extern void sound_beeper(int on);
+/* Function prototypes */
 
-#endif
+
