@@ -1,3 +1,6 @@
+2010-03-31
+* Replaced the OSS (Open Sound System) API with the portable SDL API.
+
 2010-03-24
 * 2.1-5 released
 
